Add nature reservers data administration functionality
